Hide cart side menu bottom box shadow to prevent the shadow from showing when resizing the screen on mobile

--- a/src/styles/CartSideMenu.css
+++ b/src/styles/CartSideMenu.css
@@ -13,6 +13,7 @@
     opacity ease 0.5s,
     height ease 0.5s;
   box-shadow: var(--standard-box-shadow);
+  clip-path: polygon(-20% 0, 100% 0, 100% 100%, -20% 100%);
   visibility: hidden;
   opacity: 0;
   display: flex;
